Sync all content

--- a/content/resources/18-904s11-th.md
+++ b/content/resources/18-904s11-th.md
@@ -4,9 +4,10 @@ description: A tricolored trefoil knot. Image by Jim.belk on Wikimedia Commons.
 file: /courses/18-904-seminar-in-topology-spring-2011/855f68ecf732f2f4ded0f5beb14387f0_18-904s11-th.jpg
 file_size: 5581
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
-  caption: A tricolored trefoil knot. (Image by Jim.belk on {{% resource_link "ba48b24d-cb97-4d44-94b9-121eab393bd7"
-    "Wikimedia Commons" %}}.)
+  caption: A tricolored trefoil knot. (Image by Jim.belk on [Wikimedia Commons](http://commons.wikimedia.org/wiki/File:Tricoloring.png).)
   credit: Image by Jim.belk on Wikimedia Commons.
   image-alt: A knotted loop with the three colors red, green, and blue.
 learning_resource_types: []
