--- a/content/resources/mit18_904s11_pset1.md
+++ b/content/resources/mit18_904s11_pset1.md
@@ -4,6 +4,8 @@ description: This file contains information regarding Problem Set 1.
 file: /courses/18-904-seminar-in-topology-spring-2011/714c3a7774fbf1cbb7bda4fbc9c4e932_MIT18_904S11_pset1.pdf
 file_size: 577189
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Assignments
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
