Sync all content

--- a/content/resources/18-904s11.md
+++ b/content/resources/18-904s11.md
@@ -4,10 +4,9 @@ description: A tricolored trefoil knot. Image by Jim.belk on Wikimedia Commons.
 file: /courses/18-904-seminar-in-topology-spring-2011/d26157d4799e67615995dafb4f02b2b9_18-904s11.jpg
 file_size: 56569
 file_type: image/jpeg
-hide_download: true
-hide_download_original: null
 image_metadata:
-  caption: A tricolored trefoil knot. (Image by Jim.belk on [Wikimedia Commons](http://commons.wikimedia.org/wiki/File:Tricoloring.png).)
+  caption: A tricolored trefoil knot. (Image by Jim.belk on {{% resource_link "3735e918-d339-49a4-bc75-ca6d2071c122"
+    "Wikimedia Commons" %}}.)
   credit: Image by Jim.belk on Wikimedia Commons.
   image-alt: A knotted loop with the three colors red, green, and blue.
 learning_resource_types: []
